Caching sort-table javascript and css